...
            ),
            const SizedBox(height: 16),
            _buildWorkoutButton(
              viewModel,
              context,
              icon: Icons.auto_awesome,
              text: "FitMate AI",
              description: "Check your exercise form and get feedback",
              isRichText: true,
              onTap: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => FormListPage())
...
